--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: Verdana;
     max-width: 600px;
     margin: 0 auto;
+    line-height: 1.5;
 }
 
 a {
@@ -11,6 +12,7 @@ a {
 
 code {
     font-family: inherit;
+    background-color: lightblue;
 }
 
 pre {
@@ -18,6 +20,7 @@ pre {
     border: 1px solid #ccc;
     font-family: monospace;
     font-size: 16px;
+    padding: 10px;
 }
 
 a:hover {
@@ -26,6 +29,7 @@ a:hover {
 
 p {
     text-align: justify;
+    text-indent: 3rem;
 }
 
 h2 {
@@ -55,6 +59,7 @@ nav ul {
 
 nav ul li {
     border: 1px solid black;
+    padding: 6px 12px;
 }
 
 .main-section header {
@@ -79,6 +84,10 @@ main {
     gap: 1rem;
 }
 
+section>header {
+    font-size: 1.5rem;
+}
+
 @media (min-width: 700px) {
     body {
         display: flex;
@@ -97,4 +106,6 @@ main {
     nav ul {
         padding: 0;
     }
+
+
 }
